<resources>
    <string name="app_name">MyHeath</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="name">Name:</string>
    <string name="email1">Email:</string>
    <string name="username1">Username:</string>
    <string name="password1">Password:</string>
    <string name="re_enter_password">Re-enter Password:</string>
    <string name="add_your_details">Add your details:</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
</resources>