<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/white"
    tools:context=".login">


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="258dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="269dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logintext" />

    <TextView
        android:id="@+id/logintext"
        android:layout_width="184dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newuser" />

    <Button
        android:id="@+id/newuser"
        android:layout_width="192dp"
        android:layout_height="112dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="16dp"
        android:text="new user?"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="109dp"
        android:layout_height="62dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="248dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>